# 42_rt

./: .gitignore  Cargo.toml  README.md  map_ideas.txt  model.rs  notes.txt  oui.ppm
benches/: tuple_bench.rs
scenes/: test.json
src/: constants.rs  lib.rs  light_utils.rs  main.rs  parser.rs  utils.rs
src/structure/: camera.rs  canvas.rs  color.rs  intersection.rs  light.rs  material.rs  matrix.rs  mod.rs  objects.rs  pattern.rs  point.rs  ray.rs  renderer.rs  tuple.rs  vector.rs  world.rs
src/structure/objects/: sphere.rs
src/structure/shapes/: cone.rs  cube.rs  cylinder.rs  disk.rs  mod.rs  plane.rs  shape.rs  sphere.rs  torus.rs  triangle.rs  tube.rs
src/structure/textures/: gradient.rs  mod.rs  solid.rs  stripe.rs  texture.rs
src/structure/traits/: object.rs
src/traits/: dot.rs  intersect.rs  mod.rs  shape.rs  texture.rs  transform.rs  type_trait.rs
tests/: test_canvas.rs  test_color.rs  test_cube.rs  test_intersect_sphere.rs  test_light.rs  test_material.rs  test_matrix.rs  test_patterns.rs  test_plane.rs  test_point.rs  test_ray.rs  test_reflectivity.rs  test_refraction.rs  test_shadow.rs  test_sphere.rs  test_torus.rs  test_tuple.rs  test_utils.rs  test_vector.rs  test_world.rs
workflows/: ci.yml
