[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
criterion = "0.4"

[dependencies]
minifb = "0.25"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bench]]
name = "tuple_bench"
harness = false
